--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requests = "^2.32.0"
 llama-cpp-python = "^0.3.12"
 tqdm = "^4.66.0"
 ftfy = "^6.3.1"
-googletrans = "4.0.0rc1"
+googletrans = "^4.0.0rc1"
 
 [tool.poetry.scripts]
 get-papers-list = "get_papers_list.cli:main"
